force-app-metadata-removed/main/default/objects/GP__c/fields/NHS_ID__c.field-meta.xml
<CustomField>
    <fullName>NHS_ID__c</fullName>
    <externalId>true</externalId>
    <label>NHS ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>