force-app-metadata-removed/main/default/objects/GP__c/fields/Senior_GP__c.field-meta.xml
<CustomField>
    <fullName>Senior_GP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior GP?</label>
    <type>Checkbox</type>
</CustomField>