force-app-metadata-removed/main/default/objects/GP__c/fields/Surgery__c.field-meta.xml
<CustomField>
    <fullName>Surgery__c</fullName>
    <label>Surgery</label>
    <referenceTo>Surgery__c</referenceTo>
    <relationshipLabel>GPs</relationshipLabel>
    <relationshipName>GPs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>